trunk/Archive2/a4/a77ee161996fb7/output
main.cpp:10:59: error: invalid default argument for a template template parameter
 template <typename V, template <typename> class W = A<V>::AA>
                                                           ^
main.cpp: In function 'int main()':
main.cpp:17:10: error: template argument 2 is invalid
     B<int> b;
          ^
main.cpp:17:13: error: invalid type in declaration before ';' token
     B<int> b;
             ^
